--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+$primary-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+body {
+    margin: 0;
+    height: 100vh;
+    background: url("./assets/bg.png") no-repeat center;
+    background-size: cover;
+    box-sizing: border-box;
+}
