--- a/src/app/components/converter/converter.component.scss
+++ b/src/app/components/converter/converter.component.scss
@@ -1,62 +1,61 @@
 @use "../../../styles.scss" as main;
 
-.wraper {
-    margin: 1rem auto;
-    width: 80%;
-    max-width: 55rem;
-    height: 20rem;
+.converter-wraper {
+    height: 33rem;
+    padding: .5rem;
 
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-between;
 
     background: rgba(255, 255, 255, 0.225);
+    // background: white;
     border-radius: 1rem;
     box-shadow: main.$primary-shadow;
-    .side-currency {
-        margin-top: 1rem;
+    .converter-actual {
         display: flex;
-        flex-direction: column;
         align-items: center;
-        gap: 1rem;
-        p {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        select{
-            width: 100%;
-            height: 2rem;
+        gap: .3rem;
+        .side-currency {
+            margin-top: 1rem;
 
-            border-radius: .5rem;
-            box-shadow: main.$primary-shadow;
-            &:focus {
-                outline: none;
+            flex: 40%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+            .currency-form {
+                width: 100%;
+            }
+            .interbank-rate {
+                display: flex;
+                // align-items: center;
+                justify-content: space-between;
+                // gap: 1rem;
+                p {
+                    margin-bottom: 0;
+                    font-size: .9rem;
+                    color: #eaeaea;
+                }
+            }
+            p {
+                font-size: 1.5rem;
+                font-weight: bold;
             }
         }
-        input {
-            width: 100%;
-            height: 2rem;
+        .swap .arrows {
+            // margin-top: 5rem;
+            padding: 1rem;
+            
+            flex: auto;
+            display: flex;
+    
             border-radius: .5rem;
-            border: 1px solid rgb(118, 118, 118);
-            box-shadow: main.$primary-shadow;
-            &:focus {
-                outline: none;
+            cursor: pointer;
+            transition: all .5s;
+            &:hover {
+                background: rgba(255, 255, 255, 0.75);
             }
-            &::-webkit-inner-spin-button {
-                display: none;
-            }
-        }
-    }
-    .swap .arrows {
-        margin-top: 5rem;
-        padding: 1rem;
-        
-        display: flex;
-
-        border-radius: .5rem;
-        cursor: pointer;
-        transition: all .5s;
-        &:hover {
-            background: rgba(255, 255, 255, 0.75);
         }
     }
 }
