--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 $primary-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+* {
+    box-sizing: border-box;
+}
 body {
     margin: 0;
     height: 100vh;
     background: url("./assets/bg.png") no-repeat center;
+    backdrop-filter: blur(100px);
     background-size: cover;
     box-sizing: border-box;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
